--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
     <title>Africa map</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
-    <script type =" " src="visualization.js"></script>
 
+
+<body>
+    <div id="map"></div>
+    <!-- D3 library -->
     <script src="https://d3js.org/d3.v6.min.js"></script>
+
+    <!-- Topojson library -->
+    <script src="https://d3js.org/topojson.v1.min.js"></script>
+
+    <!-- The visualization file -->
+    <script type =" " src="visualization.js"></script>
+    
 </body>
 </html>
